@@ -181,6 +181,7 @@
                  <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.17</version>
                     <configuration>
+                            <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                         <testFailureIgnore>true</testFailureIgnore>
                     </configuration>
             </plugin>
@@ -260,6 +261,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.17</version>
                         <configuration>
+                            <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                             <excludes>
                                 <exclude>*.java</exclude>
                             </excludes>
